# mnist_onnxruntime_cpp

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  clean_build.sh  run.sh  setup.sh
src/: main.cpp
